EC2/cfn-signal-help.yml
---
Parameters:
  SSHKey:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance

Resources:
  MyInstance:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: us-east-1a
      ImageId: ami-0c2b8ca1dad447f8a
      InstanceType: t2.micro
      KeyName: !Ref SSHKey 
      SecurityGroups:
        - !Ref SSHSecurityGroup
      
      UserData: 
        Fn::Base64: 
          !Sub |
            #!/bin/bash -xe
            yum update -y aws-cfn-bootstrap
            # Start cfn-init 
            /opt/aws/bin/cfn-init -s ${AWS::StackId} -r MyInstance --region ${AWS::Region} ||
            error_exit "Failed to run cfn-init"
            # Start cfn-signal to the wait Condition
            /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackId} --resource SampleWaitCondition
            -- region ${AWS::Region}
    Metadata:         
      Comment: Install a simple Apache HTTP page
      AWS::CloudFormation::Init:
        config:
          packages: 
            yum:
              httpd: []
          files: 
            "/var/www/html/index.html":
              content: |
                <h1>Hello World from EC2 Instance!</h1>
                <p>This was created using cfn-init</p>
              mode: '000644'
          commands: 
            hello:
              command: "echo hello world"
          services:
            sysvinit:
              httpd:
                enabled: "true"
                ensureRunning: "true"

  SampleWaitCondition:
    CreationPolicy:
      ResourceSignal:
        Timeout: PT2M
        Count: 1
    Type: AWS::CloudFormation::WaitCondition

  #our SSH Securtiy Group
  SSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SSH and HTTP
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          FromPort: 22
          ToPort: 22
